[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
; minversion = 3.0
; norecursedirs = build docs/_build
; doctest_plus = enabled
; addopts = -p no:warnings
testpaths = "nuskybgd" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
name = nuskybgd
description =  NuSTAR Background Tools
long_description =  NuSTAR Background Tools
author = NuSTAR Team
author_email = bwgref@caltech.edu
license = LICENSE.rst
url = ""
edit_on_github = False
github_project = nuskybgd-py


[options]
zip_safe = False
packages = find:
install_requires = 
    numpy
    matplotlib
    astropy
    jupyter
    h5py
    sphinx
    sphinx_rtd_theme
    regions
python_requires = >=3.6
setup_requires = setuptools_scm


[options.extras_require]
test =
    pytest-astropy
    matplotlib
docs =
    sphinx-astropy

[options.package_data]
* = *.fits, *.csv
my_package.templates = *

[options.entry_points]
console_scripts =
    nuskybgd = nuskybgd.cli:main_nuskybgd

;astropy-package-template-example = packagename.example_mod:main

